[gd_scene load_steps=45 format=3 uid="uid://bgpay6nr83oyl"]

[ext_resource type="Script" uid="uid://ctv72qwvht421" path="res://player/player.gd" id="1_oul6g"]
[ext_resource type="PackedScene" uid="uid://cndjvagydu2qu" path="res://player/art/Mage.fbx" id="2_rkbax"]
[ext_resource type="Script" uid="uid://6xi8xb7tociq" path="res://player/player_movement_component.gd" id="3_g1dw6"]
[ext_resource type="Animation" uid="uid://dg1po7ca03jjs" path="res://player/art/idle.res" id="3_kb6p2"]
[ext_resource type="Animation" uid="uid://bb5wt7d8515g4" path="res://player/art/walk.res" id="4_wodsf"]
[ext_resource type="Script" uid="uid://baydk0rou7bsr" path="res://player/player_movement_state_machine.gd" id="4_yw30f"]
[ext_resource type="Animation" uid="uid://v77u6ae03lv2" path="res://player/art/fall.res" id="5_32hag"]
[ext_resource type="Script" uid="uid://lx1j778ipivi" path="res://player/states/movement_states/idle_state.gd" id="5_qjkh3"]
[ext_resource type="Script" uid="uid://d2jlfjmcuucb4" path="res://player/states/movement_states/walk_state.gd" id="6_g6k8r"]
[ext_resource type="Animation" uid="uid://bvc4konmgm3nn" path="res://player/art/sprint.res" id="6_tqiix"]
[ext_resource type="Script" uid="uid://bhi6tb35hig5r" path="res://player/states/movement_states/sprint_state.gd" id="7_boad6"]
[ext_resource type="Animation" uid="uid://cqyv0ouiab6mg" path="res://player/art/jump.res" id="7_e7oew"]
[ext_resource type="Script" uid="uid://bpeej7k0t6wo" path="res://player/states/movement_states/jump_state.gd" id="8_rgyib"]
[ext_resource type="Script" uid="uid://5e1gqjw8n6gj" path="res://player/states/movement_states/fall_state.gd" id="9_hg6s5"]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c35mf"]
_data = {
&"Fall": ExtResource("5_32hag"),
&"Idle": ExtResource("3_kb6p2"),
&"Jump": ExtResource("7_e7oew"),
&"Sprint": ExtResource("6_tqiix"),
&"Walk": ExtResource("4_wodsf")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kb6p2"]
animation = &"Fall"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wodsf"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_32hag"]
animation = &"Jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tqiix"]
animation = &"Sprint"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e7oew"]
animation = &"Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_c35mf"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_65viv"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_x7c3f"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bjvpn"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_s7qer"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_g4c7l"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_knn7v"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7pqkx"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_uw77l"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rptt4"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_r7pn3"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_b8hi5"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2uvqg"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1s1yo"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5ejfk"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jd2rm"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_q28gw"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ge24q"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pnw6m"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1so5t"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_55jnj"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_dx5ib"]
states/End/position = Vector2(1073, 37.6375)
states/Fall/node = SubResource("AnimationNodeAnimation_kb6p2")
states/Fall/position = Vector2(768.863, 264.025)
states/Idle/node = SubResource("AnimationNodeAnimation_wodsf")
states/Idle/position = Vector2(404.863, 37.2063)
states/Jump/node = SubResource("AnimationNodeAnimation_32hag")
states/Jump/position = Vector2(441.363, 264.213)
states/Sprint/node = SubResource("AnimationNodeAnimation_tqiix")
states/Sprint/position = Vector2(840.363, 35.025)
states/Walk/node = SubResource("AnimationNodeAnimation_e7oew")
states/Walk/position = Vector2(615.363, -93.3625)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_c35mf"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_65viv"), "Idle", "Jump", SubResource("AnimationNodeStateMachineTransition_x7c3f"), "Idle", "Fall", SubResource("AnimationNodeStateMachineTransition_bjvpn"), "Idle", "Sprint", SubResource("AnimationNodeStateMachineTransition_s7qer"), "Walk", "Sprint", SubResource("AnimationNodeStateMachineTransition_g4c7l"), "Walk", "Fall", SubResource("AnimationNodeStateMachineTransition_knn7v"), "Walk", "Jump", SubResource("AnimationNodeStateMachineTransition_7pqkx"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_uw77l"), "Sprint", "Fall", SubResource("AnimationNodeStateMachineTransition_rptt4"), "Sprint", "Walk", SubResource("AnimationNodeStateMachineTransition_r7pn3"), "Sprint", "Jump", SubResource("AnimationNodeStateMachineTransition_b8hi5"), "Sprint", "Idle", SubResource("AnimationNodeStateMachineTransition_2uvqg"), "Jump", "Walk", SubResource("AnimationNodeStateMachineTransition_1s1yo"), "Jump", "Idle", SubResource("AnimationNodeStateMachineTransition_5ejfk"), "Jump", "Fall", SubResource("AnimationNodeStateMachineTransition_jd2rm"), "Jump", "Sprint", SubResource("AnimationNodeStateMachineTransition_q28gw"), "Fall", "Sprint", SubResource("AnimationNodeStateMachineTransition_ge24q"), "Fall", "Walk", SubResource("AnimationNodeStateMachineTransition_pnw6m"), "Fall", "Jump", SubResource("AnimationNodeStateMachineTransition_1so5t"), "Fall", "Idle", SubResource("AnimationNodeStateMachineTransition_55jnj")]
graph_offset = Vector2(336.615, -224.955)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_a2xo5"]
graph_offset = Vector2(-103.68, 147.84)
nodes/MovementStateMachine/node = SubResource("AnimationNodeStateMachine_dx5ib")
nodes/MovementStateMachine/position = Vector2(30, 180)
nodes/output/position = Vector2(410, 200)
node_connections = [&"output", 0, &"MovementStateMachine"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_g1dw6"]
radius = 0.8
height = 2.5

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_oul6g")

[node name="Mage" parent="." instance=ExtResource("2_rkbax")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="Mage/Rig" index="0"]
bones/1/position = Vector3(-2.36658e-30, 0.390139, 0)
bones/1/rotation = Quaternion(-1.11128e-10, 0.0431578, 2.57241e-09, 0.999068)
bones/2/position = Vector3(-7.75391e-29, 0.191978, -1.44121e-15)
bones/2/rotation = Quaternion(5.34989e-15, 1.3312e-30, -2.498e-16, 1)
bones/3/position = Vector3(-5.63459e-29, 0.374988, 3.14044e-15)
bones/3/rotation = Quaternion(6.93889e-18, -1.79843e-41, -2.22045e-16, 1)
bones/5/position = Vector3(0.212007, 0.134132, 8.33072e-08)
bones/5/rotation = Quaternion(-0.558314, -0.0617943, -0.648178, 0.514133)
bones/5/scale = Vector3(1, 1, 1)
bones/6/position = Vector3(6.90908e-10, 0.241897, -9.01138e-10)
bones/6/rotation = Quaternion(-6.27416e-09, -1.9341e-08, -0.487696, 0.873014)
bones/6/scale = Vector3(1, 1, 1)
bones/7/position = Vector3(6.00365e-09, 0.260044, 6.05823e-10)
bones/7/rotation = Quaternion(1.0654e-09, -2.67436e-10, 0.0266581, 0.999645)
bones/7/scale = Vector3(1, 1, 1)
bones/8/position = Vector3(-3.67125e-09, 0.0738259, 0)
bones/8/rotation = Quaternion(-0.319746, -0.325454, 0.14202, 0.878449)
bones/9/position = Vector3(1.43316e-08, 0.0961252, -0.0575)
bones/9/rotation = Quaternion(0.000586267, 0.000586283, -0.704951, 0.709255)
bones/12/position = Vector3(-0.212007, 0.134132, 8.88951e-08)
bones/12/rotation = Quaternion(-0.616969, 0.0816609, 0.621742, 0.475519)
bones/12/scale = Vector3(1, 1, 1)
bones/13/position = Vector3(-6.90901e-10, 0.241897, -9.01138e-10)
bones/13/rotation = Quaternion(-8.31793e-09, 5.01484e-08, 0.511233, 0.859442)
bones/13/scale = Vector3(1, 1, 1)
bones/14/position = Vector3(-6.00365e-09, 0.260044, 6.05823e-10)
bones/14/rotation = Quaternion(1.0654e-09, 2.67436e-10, -0.0266581, 0.999645)
bones/14/scale = Vector3(1, 1, 1)
bones/15/position = Vector3(3.67125e-09, 0.0738259, 0)
bones/15/rotation = Quaternion(-0.31802, 0.30026, -0.22363, 0.871032)
bones/16/position = Vector3(-2.08809e-09, 0.0961252, -0.0575001)
bones/16/rotation = Quaternion(0.00107714, 0.00126852, 0.705943, 0.708267)
bones/19/position = Vector3(-6.3115e-30, 0.268797, 4.44132e-16)
bones/19/rotation = Quaternion(-5.80654e-11, -0.0313417, -1.88013e-09, 0.999509)
bones/21/position = Vector3(0.170945, 0.113587, 1.18263e-08)
bones/21/rotation = Quaternion(0.993537, 0.0834767, 0.0741807, 0.0203284)
bones/21/scale = Vector3(1, 1, 1)
bones/22/position = Vector3(1.49012e-08, 0.227077, -9.15641e-10)
bones/22/rotation = Quaternion(0.220038, 5.97091e-08, -1.35051e-07, 0.975491)
bones/22/scale = Vector3(1, 1, 1)
bones/23/position = Vector3(-2.98023e-08, 0.149437, -3.9265e-09)
bones/23/rotation = Quaternion(-0.530266, -0.208766, 0.0473643, 0.820361)
bones/23/scale = Vector3(1, 1, 1)
bones/24/position = Vector3(2.98023e-08, 0.16565, 1.51573e-08)
bones/24/rotation = Quaternion(7.17488e-09, 0.920355, -0.391084, 1.41632e-07)
bones/24/scale = Vector3(1, 1, 1)
bones/25/position = Vector3(-0.170945, 0.113587, 1.74142e-08)
bones/25/rotation = Quaternion(0.996878, -0.0298316, 0.0313562, 0.0660383)
bones/25/scale = Vector3(1, 1, 1)
bones/26/position = Vector3(-1.49012e-08, 0.227077, -9.15641e-10)
bones/26/rotation = Quaternion(0.291983, -5.97368e-08, 1.91138e-07, 0.956423)
bones/26/scale = Vector3(1, 1, 1)
bones/27/position = Vector3(2.98023e-08, 0.149437, -3.9265e-09)
bones/27/rotation = Quaternion(-0.568594, 0.114392, -0.0101227, 0.814563)
bones/27/scale = Vector3(1, 1, 1)
bones/28/position = Vector3(-2.98023e-08, 0.16565, 1.51573e-08)
bones/28/rotation = Quaternion(-3.18979e-09, 0.920355, -0.391084, -1.43326e-07)
bones/28/scale = Vector3(1, 1, 1)
bones/29/rotation = Quaternion(0.707107, -2.29302e-07, -4.60551e-08, 0.707107)
bones/29/scale = Vector3(1, 1, 1)
bones/30/position = Vector3(0.202182, 0.0259903, 0.205181)
bones/30/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/30/scale = Vector3(1, 1, 1)
bones/31/position = Vector3(2.10391e-08, 0.362833, -2.00092e-08)
bones/31/rotation = Quaternion(9.65792e-09, 1.77955e-09, 0.985719, -0.168398)
bones/32/position = Vector3(-1.40994e-10, 0.213436, -2.63467e-10)
bones/32/rotation = Quaternion(-1.28417e-07, 0.391084, 0.920355, -9.01132e-08)
bones/33/position = Vector3(5.9961e-09, 0.16565, 0)
bones/33/rotation = Quaternion(-0.391084, -6.885e-08, -6.56288e-08, 0.920355)
bones/33/scale = Vector3(1, 1, 1)
bones/34/position = Vector3(-1.49012e-08, 0.16565, 1.60484e-08)
bones/34/rotation = Quaternion(1, -3.19914e-14, 1.94707e-07, 0)
bones/35/position = Vector3(0, 2.44249e-15, -2.04891e-08)
bones/35/rotation = Quaternion(5.8601e-08, -1.20819e-15, -1.94669e-08, 1)
bones/36/rotation = Quaternion(0.707107, -3.82385e-08, 1.45009e-07, 0.707107)
bones/36/scale = Vector3(1, 1, 1)
bones/37/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/37/scale = Vector3(1, 1, 1)
bones/38/rotation = Quaternion(-5.83589e-09, 6.43837e-10, 0.994809, 0.101756)
bones/39/position = Vector3(1.31306e-08, 0.213436, 1.7969e-09)
bones/39/rotation = Quaternion(-1.27811e-07, 0.391084, 0.920355, -9.03709e-08)
bones/40/position = Vector3(2.55539e-08, 0.16565, 8.3819e-09)
bones/40/rotation = Quaternion(-0.391084, -6.885e-08, -6.56288e-08, 0.920355)
bones/40/scale = Vector3(1, 1, 1)
bones/41/position = Vector3(1.49012e-08, 0.16565, 1.73893e-08)
bones/41/rotation = Quaternion(1, -3.19914e-14, 1.94707e-07, 0)
bones/42/position = Vector3(0, 2.44249e-15, -2.04891e-08)
bones/42/rotation = Quaternion(5.8601e-08, -1.20819e-15, -1.94669e-08, 1)
bones/43/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/44/position = Vector3(0.520841, 0.783552, -0.0576374)
bones/44/rotation = Quaternion(-0.794627, 1.2666e-07, -0.607098, 3.72529e-09)
bones/44/scale = Vector3(1, 1, 1)
bones/45/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/46/position = Vector3(-0.510844, 0.783552, 0.0597369)
bones/46/rotation = Quaternion(-0.758253, -1.52737e-07, 0.651961, 2.98023e-08)
bones/46/scale = Vector3(1, 1, 1)

[node name="Mage_Cape" parent="Mage/Rig/Skeleton3D" index="0"]
transform = Transform3D(0.996275, -1.38015e-09, 0.0862353, 1.36097e-09, 1, 2.81247e-10, -0.0862353, -1.62828e-10, 0.996275, -1.2997e-08, 1.20035, -1.5442e-07)
bone_idx = 4

[node name="Spellbook" parent="Mage/Rig/Skeleton3D" index="1"]
transform = Transform3D(1.44853e-06, 0.262866, 0.964833, 0.99998, -0.00608644, 0.00165661, 0.00630803, 0.964814, -0.26286, 0.577537, 0.630046, 0.237357)
bone_idx = 10

[node name="Spellbook_open" parent="Mage/Rig/Skeleton3D" index="2"]
transform = Transform3D(1.44853e-06, 0.262866, 0.964833, 0.99998, -0.00608644, 0.00165661, 0.00630803, 0.964814, -0.26286, 0.545901, 0.630779, 0.12124)
bone_idx = 11

[node name="1H_Wand" parent="Mage/Rig/Skeleton3D" index="3"]
transform = Transform3D(0.000767106, -0.153174, -0.988199, -0.999995, -0.00328604, -0.000266878, -0.00320639, 0.988194, -0.153175, -0.491067, 0.635903, 0.106093)
bone_idx = 17

[node name="2H_Staff" parent="Mage/Rig/Skeleton3D" index="4"]
transform = Transform3D(0.000767106, -0.153174, -0.988199, -0.999995, -0.00328604, -0.000266878, -0.00320639, 0.988194, -0.153175, -0.491067, 0.635903, 0.106093)
bone_idx = 18

[node name="Mage_Hat" parent="Mage/Rig/Skeleton3D" index="5"]
transform = Transform3D(0.99972, -3.67808e-10, 0.0236466, 3.59789e-10, 1, 3.43476e-10, -0.0236466, -3.34865e-10, 0.99972, -7.4842e-09, 1.76858, -1.79786e-07)
bone_idx = 20

[node name="AnimationPlayer" parent="Mage" index="1"]
libraries = {
&"": SubResource("AnimationLibrary_c35mf")
}

[node name="AnimationTree" type="AnimationTree" parent="Mage"]
tree_root = SubResource("AnimationNodeBlendTree_a2xo5")
anim_player = NodePath("../AnimationPlayer")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
shape = SubResource("CapsuleShape3D_g1dw6")

[node name="MovementComponent" type="Node" parent="." node_paths=PackedStringArray("entity")]
script = ExtResource("3_g1dw6")
entity = NodePath("..")
walk_speed_factor = 10.0
sprint_speed_factor = 15.0

[node name="MovementStateMachine" type="Node" parent="." node_paths=PackedStringArray("starting_state", "player", "movement_component", "animation_tree")]
script = ExtResource("4_yw30f")
starting_state = NodePath("Idle")
player = NodePath("..")
movement_component = NodePath("../MovementComponent")
animation_tree = NodePath("../Mage/AnimationTree")

[node name="Idle" type="Node" parent="MovementStateMachine"]
script = ExtResource("5_qjkh3")

[node name="Walk" type="Node" parent="MovementStateMachine"]
script = ExtResource("6_g6k8r")
state_type = 1

[node name="Sprint" type="Node" parent="MovementStateMachine"]
script = ExtResource("7_boad6")
state_type = 2

[node name="Jump" type="Node" parent="MovementStateMachine"]
script = ExtResource("8_rgyib")
state_type = 3

[node name="Fall" type="Node" parent="MovementStateMachine"]
script = ExtResource("9_hg6s5")
state_type = 4

[node name="CoyoteTimer" type="Timer" parent="MovementStateMachine/Fall"]

[connection signal="timeout" from="MovementStateMachine/Fall/CoyoteTimer" to="MovementStateMachine/Fall" method="_on_coyote_timer_timeout"]

[editable path="Mage"]
